Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,67 +1,69 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
-<head>
+  <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="kenreilly.github.io : Kenneth Reilly">
+    <meta name="description" content="reflections : Kenneth Reilly">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>kenreilly.github.io</title>
-</head>
+    <title>reflections</title>
+  </head>
 
-<body>
+  <body>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-            <a id="forkme_banner" href="https://github.com/kenreilly">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/kenreilly/reflections">View on GitHub</a>
 
-            <h1 id="project_title">kenreilly.github.io</h1>
-            <h2 id="project_tagline">Kenneth Reilly</h2>
+          <h1 id="project_title">reflections</h1>
+          <h2 id="project_tagline">Kenneth Reilly</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/kenreilly/reflections/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/kenreilly/reflections/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-        <section id="main_content" class="inner">
-            <h3><a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h3>
+      <section id="main_content" class="inner">
+        <h3>
+<a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h3>
 
-            <p>I am a programmer, musician, audio engineer, and electronics technician. I enjoy taking on challenging projects, pushing the limits of current technology, and working on state-of-the-art designs and systems.</p>
+<p>I am a programmer, musician, audio engineer, and electronics technician. I enjoy taking on challenging projects, pushing the limits of current technology, and working on state-of-the-art designs and systems.</p>
 
-            <h3>
-                <a id="projects--roles" class="anchor" href="#projects--roles" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects / Roles
-            </h3>
+<h3>
+<a id="projects--roles" class="anchor" href="#projects--roles" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects / Roles</h3>
 
-            <p>Stuff goes here</p>
+<p>Stuff goes here</p>
 
-            <h3>
-                <a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills
-            </h3>
+<h3>
+<a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
 
-            <p>Skills go here</p>
+<p>Skills go here</p>
 
-            <h3>
-                <a id="contact--connect" class="anchor" href="#contact--connect" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact / Connect
-            </h3>
+<h3>
+<a id="contact--connect" class="anchor" href="#contact--connect" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact / Connect</h3>
 
-            <p>
-                <a href="https://github.com/kenreilly" class="user-mention">@kenreilly</a>
-                <a href="mailto:kenreilly@xscript.io">kenreilly@xscript.io</a>
-            </p>
-        </section>
+<p><a href="https://github.com/kenreilly" class="user-mention">@kenreilly</a>
+<a href="mailto:kenreilly@xscript.io">kenreilly@xscript.io</a>
+</p>
+      </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-        <footer class="inner">
-            <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-        </footer>
+      <footer class="inner">
+        <p class="copyright">reflections maintained by <a href="https://github.com/kenreilly">kenreilly</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
     </div>
 
+    
 
-
-</body>
+  </body>
 </html>
