--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
   <head>
@@ -16,42 +16,23 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kenreilly/reflections">View on GitHub</a>
-
-          <h1 id="project_title">reflections</h1>
+        
+          <h1 id="project_title">Reflections</h1>
           <h2 id="project_tagline">Kenneth Reilly</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/kenreilly/reflections/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/kenreilly/reflections/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h3>
+        <h3><a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h3>
 
-<p>I am a programmer, musician, audio engineer, and electronics technician. I enjoy taking on challenging projects, pushing the limits of current technology, and working on state-of-the-art designs and systems.</p>
+			<p>Throughout the years I have overcome breakups, divorce, addictions, limiting beliefs, and much more.</p>
+			<p>In this blog I share the valuable insights I have gained from these experiences.</p>
 
-<h3>
-<a id="projects--roles" class="anchor" href="#projects--roles" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects / Roles</h3>
-
-<p>Stuff goes here</p>
-
-<h3>
-<a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
-
-<p>Skills go here</p>
-
-<h3>
-<a id="contact--connect" class="anchor" href="#contact--connect" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact / Connect</h3>
-
-<p><a href="https://github.com/kenreilly" class="user-mention">@kenreilly</a>
-<a href="mailto:kenreilly@xscript.io">kenreilly@xscript.io</a>
-</p>
+		  <h3>Posts</h3>
+			<a href="posts/05102016.html">One-sided relationships</a>		
       </section>
     </div>
 
