--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>reflections</title>
+    <title>Reflections</title>
   </head>
 
   <body>
@@ -28,8 +28,7 @@
       <section id="main_content" class="inner">
         <h3><a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h3>
 
-			<p>Throughout the years I have overcome breakups, divorce, addictions, limiting beliefs, and much more.</p>
-			<p>In this blog I share the valuable insights I have gained from these experiences.</p>
+			<p>Throughout the years I have overcome breakups, divorce, addictions, limiting beliefs, and much more. In this blog I share the valuable insights I have gained from these experiences.</p>
 
 		  <h3>Posts</h3>
 			<a href="posts/05102016.html">One-sided relationships</a>		
