--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
         
           <h1 id="project_title">Reflections</h1>
-          <h2 id="project_tagline">Kenneth Reilly</h2>
+          <h2 id="project_tagline">A blog about insights and lessons learned</h2>
 
          </header>
     </div>
@@ -28,6 +28,7 @@
       <section id="main_content" class="inner">
         <h3><a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h3>
 
+		  
 			<p>Throughout the years I have overcome breakups, divorce, addictions, limiting beliefs, and much more. In this blog I share the valuable insights I have gained from these experiences.</p>
 
 		  <h3>Posts</h3>
